stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_run__run_empty_flow.snap
---
source: crates/stepflow-cli/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=tests/empty/empty_flow.yaml"
    - "--config=tests/empty/stepflow-config.yml"
    - "--input-json={\"message\": \"hello world\", \"numbers\": {\"a\": 10, \"b\": 20}, \"items\": [\"first\", \"second\", \"third\"]}"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
📊 Validation results: 0 fatal, 0 errors, 5 warnings

⚠️  Warnings:
  WARN Field access '$.message' on step 'workflow_input' cannot be validated: no input schema available ($.output.message)
  WARN Field access '$.numbers.a' on step 'workflow_input' cannot be validated: no input schema available ($.output.a_value)
  WARN Field access '$.numbers.b' on step 'workflow_input' cannot be validated: no input schema available ($.output.b_value)
  WARN Field access '$.items[0]' on step 'workflow_input' cannot be validated: no input schema available ($.output.first_item)
  WARN Field access '$.numbers' on step 'workflow_input' cannot be validated: no input schema available ($.output.nested_data)
{"outcome":"success","result":{"message":"hello world","a_value":10,"b_value":20,"first_item":"first","nested_data":{"a":10,"b":20}}}
----- stderr -----
run_id: [ID]
