stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_run__run_invalid_input_json.snap
---
source: crates/stepflow-main/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=tests/mock/basic.yaml"
    - "--input-json=invalid json"
---
success: false
exit_code: 1
----- stdout -----
📊 Validation results: 0 fatal, 0 errors, 7 warnings

⚠️  Warnings:
  WARN Workflow has no name defined (name)
  WARN Workflow has no description defined (description)
  WARN Field access '$.name' on step 'workflow_input' cannot be validated: no input schema available (steps.0.input.input)
  WARN Field access '$.output' on step 'step1' cannot be validated: no output schema available (steps.1.input.input)
  WARN Field access '$.output' on step 'step1' cannot be validated: no output schema available (output.name)
  WARN Field access '$.x' on step 'step2' cannot be validated: no output schema available (output.x)
  WARN Field access '$.y' on step 'step2' cannot be validated: no output schema available (output.y)

----- stderr -----
REPL command error: Invalid JSON input
